--- a/index.html
+++ b/index.html
@@ -20,39 +20,92 @@
 
                 <!-- ===== PAGE: HOME/DASHBOARD ===== -->
                 <section class="page" id="page-home">
-                    <div class="space-y-8 stagger-in">
-                        <div class="pt-4 space-y-2">
-                            <span class="eyebrow block">Today</span>
-                            <h1 class="hero-title">Hello, Alex!</h1>
-                            <p class="text-soft">Ready for a new adventure? 🐾</p>
-                        </div>
-
-                        <div id="upcoming-walk-section" class="space-y-3">
-                            <h2 class="section-title">Upcoming Walk</h2>
-                            <div id="upcoming-walk-card" class="glass-card card-row p-4 cursor-pointer" data-walk-id="99">
-                                <img id="upcoming-walk-avatar" src="https://placehold.co/96x96/0F766E/0B1120?text=J" alt="Jordan Lee" class="w-14 h-14 avatar-frame object-cover">
-                                <div class="space-y-1">
-                                    <p class="font-semibold text-base" id="upcoming-walk-title">With Jordan Lee</p>
-                                    <p class="text-sm text-soft" id="upcoming-walk-time">Today at 4:00 PM</p>
+                    <div class="space-y-10 stagger-in home-screen">
+                        <header class="home-header space-y-4 pt-4">
+                            <div class="flex items-start justify-between gap-4">
+                                <div class="space-y-2">
+                                    <span class="eyebrow block">Today</span>
+                                    <h1 class="hero-title">Hello, Alex!</h1>
+                                    <p class="text-soft" id="home-greeting-subtitle">Ready for a new adventure? 🐾</p>
                                 </div>
-                                <div class="ml-auto text-right space-y-1">
-                                    <span class="badge-muted" id="upcoming-walk-duration">30 min</span>
-                                    <p class="text-sm text-soft" id="upcoming-walk-dogs">🐶 Buddy</p>
-                                </div>
+                                <button class="icon-button" id="home-notifications" aria-label="Notifications">
+                                    <span class="icon-button-indicator"></span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M18 8a6 6 0 0 0-12 0c0 7-3 9-3 9h18s-3-2-3-9"/><path d="M13.73 21a2 2 0 0 1-3.46 0"/></svg>
+                                </button>
                             </div>
+                            <div class="flex items-center gap-2 text-xs text-soft" id="home-weather">
+                                <span class="weather-pill" id="home-weather-pill">🌤️ 68°F • Perfect walking weather</span>
+                            </div>
+                        </header>
+
+                        <div id="upcoming-walk-section" class="space-y-4">
+                            <div class="home-section-header">
+                                <h2 class="section-title">Next Walk</h2>
+                                <button class="link-button" id="home-calendar-link" type="button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="3" y="4" width="18" height="18" rx="2"/><path d="M16 2v4"/><path d="M8 2v4"/><path d="M3 10h18"/></svg>
+                                    <span>Open calendar</span>
+                                </button>
+                            </div>
+                            <article id="upcoming-walk-card" class="glass-card hero-card" data-walk-id="99">
+                                <div class="hero-card-main">
+                                    <div class="hero-illustration" aria-hidden="true">🐕</div>
+                                    <div class="hero-card-copy">
+                                        <p class="hero-status" id="upcoming-walk-status">In progress</p>
+                                        <h3 class="hero-card-title" id="upcoming-walk-title">With Jordan Lee</h3>
+                                        <p class="hero-card-meta" id="upcoming-walk-time">Today at 4:00 PM</p>
+                                        <div class="hero-pill-row">
+                                            <span class="badge-muted" id="upcoming-walk-duration">30 min</span>
+                                            <span class="hero-dogs" id="upcoming-walk-dogs">🐶 Buddy</span>
+                                        </div>
+                                    </div>
+                                    <img id="upcoming-walk-avatar" src="https://placehold.co/96x96/0F766E/0B1120?text=J" alt="Jordan Lee" class="hero-avatar">
+                                </div>
+                                <div class="hero-card-actions">
+                                    <button class="btn btn-primary hero-cta" id="upcoming-walk-cta" type="button">Join live walk</button>
+                                    <button class="ghost-link" id="upcoming-walk-details" type="button">View walk details</button>
+                                </div>
+                            </article>
                         </div>
 
-                        <div class="grid grid-cols-2 gap-4">
-                             <button id="cta-book-walk" class="btn btn-primary w-full text-base py-4">Book New Walk</button>
-                             <button id="cta-recurring-walk" class="btn btn-secondary w-full text-base py-4">Schedule Walk</button>
+                        <div id="home-metrics" class="grid grid-cols-3 gap-3"></div>
+
+                        <div class="quick-actions-grid">
+                            <button id="cta-book-walk" class="btn btn-primary w-full text-base py-4">Book New Walk</button>
+                            <button id="cta-recurring-walk" class="btn btn-secondary w-full text-base py-4">Schedule Walk</button>
                         </div>
 
-                        <div>
-                             <h2 class="section-title">Recent Activity</h2>
-                             <div class="space-y-3" id="recent-activity-list"></div>
+                        <div class="quick-link-row">
+                            <button class="quick-link-card" id="cta-find-walker" type="button">
+                                <span class="quick-link-icon">🧭</span>
+                                <div>
+                                    <p class="quick-link-title">Find nearby walkers</p>
+                                    <p class="quick-link-copy">See who is available this afternoon.</p>
+                                </div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="m9 18 6-6-6-6"/></svg>
+                            </button>
                         </div>
 
-                        
+                        <section class="space-y-4">
+                            <div class="home-section-header">
+                                <h2 class="section-title">Upcoming Walks</h2>
+                                <button class="link-button" id="home-manage-plans" type="button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M12 1v22"/><path d="m17 5-5-4-5 4"/><path d="m7 19 5 4 5-4"/></svg>
+                                    <span>Manage plans</span>
+                                </button>
+                            </div>
+                            <div class="space-y-3" id="upcoming-walk-list"></div>
+                        </section>
+
+                        <section class="space-y-4">
+                            <div class="home-section-header">
+                                <h2 class="section-title">Recent Activity</h2>
+                                <button class="link-button" id="home-view-history" type="button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M3 3h18v18H3z"/><path d="M16 3v18"/><path d="M8 3v18"/><path d="M3 8h18"/><path d="M3 16h18"/></svg>
+                                    <span>View all</span>
+                                </button>
+                            </div>
+                            <div class="space-y-3" id="recent-activity-list"></div>
+                        </section>
                     </div>
                 </section>
                 
